[metadata]
name = deno_vm
version = attr: deno_vm.__pkginfo__.__version__
description = A binding to Deno + worker-vm, helps you execute JavaScript safely.
author = eight
author_email = eight04@gmail.com
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Environment :: Win32 (MS Windows)
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: Chinese (Traditional)
  Operating System :: Microsoft :: Windows :: Windows 10
  Programming Language :: Python :: 3.10
  Programming Language :: JavaScript
  Topic :: Software Development :: Libraries
	
keywords = deno, js, sandbox, execute, javascript
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/deno_vm

[options]
zip_safe = False
packages = find:

[options.package_data]
deno_vm = vm-server/bundle.js

; [bdist_wheel]
; universal = False

[vpip]
command_fallback = python cute.py
